menu text wrap fixed

--- a/cit_230/assignments/lesson-7/styles/main-7.css
+++ b/cit_230/assignments/lesson-7/styles/main-7.css
@@ -242,6 +242,13 @@ main p {
     font-weight: normal;
 }
 
+.conditions h3{
+    font-size: 25pt;
+    text-transform: uppercase;
+    letter-spacing: .16em;
+    font-weight: normal;
+}
+
 article {
     width: 90%;
     line-height: 2em;
