--- a/cit_230/assignments/lesson-7/styles/medium-7.css
+++ b/cit_230/assignments/lesson-7/styles/medium-7.css
@@ -171,7 +171,7 @@ nav {
 .flex {
     display: flex;
     justify-content: space-around;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: stretch;
     flex-shrink: 3;
 
